--- a/background.html
+++ b/background.html
@@ -1,4 +1,3 @@
 <canvas id="canvas" width="19" height="19">
 <script src="background.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="background.js"></script>
+<script src="jquery.min.js"></script>
