--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,7 @@
     </div>
 
      <!--Here is where the info gets inserted-->
+    <div id="div_titlepane" style="background-color:#EEEEEE;margin:5px;margin-bottom:0px;"></div>
     <div id="div_wdlink" style="background-color:#EEEEEE;margin:5px;margin-bottom:0px;"></div>
     <div id="div_wiki" style="background-color:#EEEEEE;margin:5px;margin-top:0px;"></div>
     <div id="div1" style="background-color:#EEEEEE;margin:5px;"></div>
@@ -57,10 +58,10 @@
 
 	<div class="container" style="width:100%">
 	    <a target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" width=40px style="float:right;"></a>
-	    <div id="div_footer" style="margin:0px; text-align:left; font-size:x-small">
+	    <div id="div_footer1" style="margin:0px; text-align:left; font-size:x-small">
         Live data provided by this extension is from <a target="_blank" href="https://www.wikidata.org/">Wikidata</a><sup>TM</sup> and is licensed <a target="_blank" href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>
         </div>
-	    <div id="div_footer" style="margin:0px; text-align:left; font-size:x-small">
+	    <div id="div_footer2" style="margin:0px; text-align:left; font-size:x-small">
         Browser extension by <a target="_blank" href="https://www.wikidata.org/wiki/User:99of9">Toby Hudson</a>
         </div>
     </div>
