--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@
         Live data provided by this extension is from <a target="_blank" href="https://www.wikidata.org/">Wikidata</a><sup>TM</sup> and is licensed <a target="_blank" href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>
         </div>
 	    <div id="div_footer2" style="margin:0px; text-align:left; font-size:x-small">
-        Browser extension by <a target="_blank" href="https://www.wikidata.org/wiki/User:99of9">Toby Hudson</a>
+        <a target="_blank" href="https://www.wikidata.org/wiki/Wikidata:Entity_Explosion"><span id="ExtensionName">Entity Explosion</span></a> version <span id="ExtensionVersion">0.0</span> by <a target="_blank" href="https://www.wikidata.org/wiki/User:99of9">Toby Hudson</a>;
         </div>
     </div>
 
