--- a/popup.html
+++ b/popup.html
@@ -49,12 +49,12 @@
     </div>
 
      <!--Here is where the info gets inserted-->
-    <div id="div_titlepane" style="background-color:#EEEEEE;margin:5px;margin-bottom:0px;"></div>
-    <div id="div_wdlink" style="background-color:#EEEEEE;margin:5px;margin-bottom:0px;"></div>
-    <div id="div_wiki" style="background-color:#EEEEEE;margin:5px;margin-top:0px;"></div>
-    <div id="div1" style="background-color:#EEEEEE;margin:5px;"></div>
-    <div id="div2" style="background-color:#EEEEEE;margin:5px;"></div>
-    <div id="div3" style="background-color:#EEEEEE;margin:5px;"></div>
+    <div id="div_title" style="background-color:#FFFFFF;padding:20px;padding-top:0px;padding-bottom:10px;"></div>
+    <div id="div_wdlink" style="background-color:#EEEEEE;padding:5px;padding-bottom:0px;"></div>
+    <div id="div_wiki" style="background-color:#EEEEEE;padding:5px;padding-top:0px;"></div>
+    <div id="div1" style="background-color:#FFFFFF;padding:5px;"></div>
+    <div id="div2" style="background-color:#FFFFFF;padding:5px;"></div>
+    <div id="div3" style="background-color:#EEEEEE;padding:5px;"></div>
 
 	<div class="container" style="width:100%">
 	    <a target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" width=40px style="float:right;"></a>
