--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,8 @@
     </div>
 
      <!--Here is where the info gets inserted-->
-    <div id="div_title" style="background-color:#FFFFFF;padding:20px;padding-top:0px;padding-bottom:10px;"></div>
+    <div id="div_title" style="background-color:#FFFFFF;padding:0px"></div>
+    <!--<div id="div_title" style="background-color:#FFFFFF;padding:20px;padding-top:0px;padding-bottom:10px;padding-right:0px;"></div> -->
     <div id="div_wdlink" style="background-color:#EEEEEE;padding:5px;padding-bottom:0px;"></div>
     <div id="div_wiki" style="background-color:#EEEEEE;padding:5px;padding-top:0px;"></div>
     <div id="div1" style="background-color:#FFFFFF;padding:5px;"></div>
