latest versions of libraries and start using
replaced bootstrap.min.js and jquery.min.js with latest versions

start using P8966 URL match pattern for pre-screening. This will detect more matches (red icon), but let me know if performance suffers.

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./bootstrap.min.css">
   <link rel="stylesheet" href="./font-awesome.min.css">
 
-  <script src="jquery.min.js"></script>
+  <script src="jquery-3.6.0.min.js"></script>
   <script src="bootstrap.min.js"></script>
 
 </head>
