--- a/background.html
+++ b/background.html
@@ -1,3 +1,3 @@
 <canvas id="canvas" width="19" height="19">
 <script src="background.js"></script>
-<script src="jquery.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
