minor changes and reorganise

--- a/popup.html
+++ b/popup.html
@@ -52,7 +52,8 @@
     <div id="div3" style="background-color:#EEEEEE;padding:5px;"></div>
 
 	<div class="container" style="width:100%">
-	    <a target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" width=40px style="float:right;"></a>
+	    <a target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" crossorigin="anonymous"
+  referrerpolicy="no-referrer" width=40px style="float:right;"></a>
 	    <div id="div_footer1" style="margin:0px; text-align:left; font-size:x-small">
         Live data provided by this extension is from <a target="_blank" href="https://www.wikidata.org/">Wikidata</a><sup>TM</sup> and is licensed <a target="_blank" href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>
         </div>
