--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@
     <div id="div3" style="background-color:#EEEEEE;padding:5px;"></div>
 
 	<div class="container" style="width:100%;">
-	    <a target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" crossorigin="anonymous" referrerpolicy="no-referrer" style="float:right; height:45px; margin-top:0; margin-right:0;"></a>
+	    <a target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img id="wdlogo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" crossorigin="anonymous" referrerpolicy="no-referrer" style="float:right; height:45px; margin-top:0; margin-left:0; margin-right:0;"></a>
 		
 	    <div id="div_footer1" dir=ltr style="margin:0px; text-align:left; font-size:x-small">
         <span id="footer1a">Live data provided by this extension is from</span> <a target="_blank" href="https://www.wikidata.org/" id="footer_Wikidata">Wikidata</a><sup id="TM">TM</sup> <span id="footer1b">and is licensed</span> <a target="_blank" href="https://creativecommons.org/publicdomain/zero/1.0/" id="CC0">CC0</a>
