--- a/popup.html
+++ b/popup.html
@@ -56,12 +56,8 @@
 	<footer class="container">
 	    <a id="wdlogo" target="_blank" href="https://commons.wikimedia.org/wiki/File:Wikidata-logo.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/320px-Wikidata-logo.svg.png" crossorigin="anonymous" referrerpolicy="no-referrer"></a>
 		
-	    <div id="div_footer1">
-        <span id="footer1a">Live data provided by this extension is from</span> <a target="_blank" href="https://www.wikidata.org/" id="footer_Wikidata">Wikidata</a><sup id="TM">TM</sup> <span id="footer1b">and is licensed</span> <a target="_blank" href="https://creativecommons.org/publicdomain/zero/1.0/" id="CC0">CC0</a>
-        </div>
-	    <div id="div_footer2">
-        <a target="_blank" href="https://www.wikidata.org/wiki/Wikidata:Entity_Explosion"><span id="ExtensionName">Entity Explosion</span></a> <span id="footer_version">version</span> <span id="ExtensionVersion">0.0</span> <span id="footer2a">by</span> <a target="_blank" href="https://www.wikidata.org/wiki/User:99of9" id="TobyHudson">Toby Hudson</a>;
-        </div>
+	    <div id="div_footer1"></div>
+	    <div id="div_footer2"></div>
     </footer>
 
 	<script src="popup.js" charset="utf-8"></script>
